--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,121 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a {
+  text-decoration: none !important;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.dashboard-container {
+  background: #f4f7fc;
   min-height: 100vh;
+  display: block;
+  overflow: hidden;
+  padding-top: 30px;
+}
+.dashboard-box {
+  width: 90%;
+  margin: auto;
+  margin-top: 30px;
+  background-color: white;
+  padding: 30px 50px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 12px 1px lightgray;
+}
+
+.user-area {
+  position: absolute;
+  bottom: auto;
+  right: 50px;
+  display: -webkit-flex;
   display: flex;
-  flex-direction: column;
+  grid-gap: 10px;
+  gap: 10px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  -webkit-align-items: center;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.user-area img {
+  height: 50px !important;
+  border-radius: 50%;
+}
+.profile-img {
+  height: 170px !important;
+  border-radius: 50%;
 }
 
-.App-link {
-  color: #61dafb;
+/* XL Device :1200px. */
+@media (min-width: 1200px) and (max-width: 1500px) {
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* LG Device :992px. */
+@media (min-width: 992px) and (max-width: 1200px) {
+}
+
+/* MD Device :768px. */
+@media (min-width: 768px) and (max-width: 991px) {
+  .about-wrapper-left .about-img2 {
+    float: right;
   }
-  to {
-    transform: rotate(360deg);
+  img.img-fluid.card-img {
+    min-height: 136px;
   }
+  .card-body p {
+    font-size: 13px;
+  }
+  .card-h5 {
+    font-size: 15px !important;
+  }
+  .achiv-text {
+    font-size: 17px;
+    min-height: 100px;
+  }
+}
+
+/* Extra small Device. */
+@media (max-width: 767px) {
+  ._2p3a {
+    width: 300px !important;
+  }
+}
+
+/* SM Small Device :550px. */
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+}
+/* Large Mobile :480px. */
+@media only screen and (min-width: 480px) and (max-width: 575px) {
+  .container {
+    width: 450px;
+  }
+}
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+  .container {
+    width: 450px;
+  }
+  .about-wrapper-left .about-img2 {
+    float: right;
+    padding: 20px;
+  }
+  .card-img-wrapper img {
+    min-height: 195.5px !important;
+  }
+  button.support-btn {
+    padding: 4.5px 23.5px;
+    font-size: 14px;
+  }
+  .section-heading h1 {
+    font-size: 27px !important;
+}
+.sticky-top {
+  position: unset !important;
+}
+.header-main h1 {
+  font-size: 55px !important;
+}
+  .section-head h2 {
+    font-size: 29px !important;
+  }
+  p.ps-3.mt-3 {
+    font-size: 11px;
+}
+
 }
