--- a/src/Components/Home/AchivmentArea/AchivmentArea.css
+++ b/src/Components/Home/AchivmentArea/AchivmentArea.css
@@ -11,11 +11,12 @@
   color: #fff;
 }
 .achiv-card {
+  height: 210px;
+  overflow: hidden;
   padding: 20px;
   text-align: center;
   background: #304f47;
   color: #fff;
-  -webkit-box-shadow: 0 0 64px rgb(17 17 17 / 10%);
   box-shadow: 0 0 64px rgb(17 17 17 / 10%);
   border-radius: 5px;
   transition: 0.3s;
@@ -23,6 +24,9 @@
 .achiv-card:hover {
   transform: translateY(-20px);
 }
-/* p.achiv-text.text-white.mb-3 {
-  min-height: 128px;
-} */
+@media screen and (max-width:768px){
+  .support-bg.text-center.achiv-card.mb-4 p {
+    font-size: 17px;
+}
+  
+}
