--- a/src/Components/Home/Contact/Contact.css
+++ b/src/Components/Home/Contact/Contact.css
@@ -16,7 +16,7 @@
 .contact-details {
   margin: 0 auto;
   border-radius: 10px;
-  margin-top: 20px;
+  margin-top: 12px;
   transition: 0.5s;
   text-align: left;
 }
@@ -33,7 +33,10 @@
   text-decoration: none;
   margin-left: 6px;
   margin-right: 6px;
-  padding: 8px 12px;
+  margin-bottom:6px;
+  width: 34px;
+  height:34px;
+  line-height: 34px;
   border-radius: 50%;
   font-size: 18px;
   color: #fff;
