--- a/src/Components/Home/Service/MainPackage.css
+++ b/src/Components/Home/Service/MainPackage.css
@@ -6,7 +6,6 @@
 img.img-fluid.card-img {
   transition: all 0.4s;
   width: 100%;
-  ;
 }
 img.img-fluid.card-img:hover {
   transform: scale(1.05);
@@ -29,6 +28,10 @@ svg.svg-inline--fa.fa-star.fa-w-18.mt-1.me-2.text-rating {
 .main-card {
   transition: all 0.4s;
 }
+h5.card-h5.support-color2 {
+  height: 20px;
+  overflow: hidden;
+}
 .main-card:hover {
   transform: translateY(-10px);
 }
@@ -40,10 +43,27 @@ svg.svg-inline--fa.fa-star.fa-w-18.mt-1.me-2.text-rating {
 .my-3.me-3.main-card.card h5 {
   font-size: 16px !important;
 }
-.card-h5{
+.card-h5 {
   font-size: 16px !important;
 }
 .spinner-box.text-center img {
-  width: 115px
-;
+  width: 115px;
+}
+
+@media screen and (max-width: 768px) {
+  button.support-btn.my-2 {
+    padding: 14px 19px;
+    font-size: 12px;
+  }
+  .card_info_stay.d-flex.justify-content-between.mb-2 p{
+    margin-bottom: 0px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .card_info_stay2.d-flex.justify-content-between.mb-2 p {
+    margin-bottom: 0;
+}
+.card-img-wrapper img {
+  min-height: 152.5px !important;
+}
 }
